# lerobot_trossen

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
lerobot_robot_trossen/: record.py  replay.py  teleoperate.py
lerobot_robot_trossen/robots/bi_widowxai_follower/: __init__.py  bi_widowxai_follower.py  config_bi_widowxai_follower.py
lerobot_robot_trossen/teleoperators/: utils.py
lerobot_robot_trossen/teleoperators/bi_widowxai_leader/: bi_widowxai_leader.py
lerobot_robot_trossen/teleoperators/widowxai_leader/: config_widowxai_leader.py  widowxai_leader.py
trossen_lerobot/: record.py  replay.py  teleoperate.py
trossen_lerobot/robots/: utils.py
trossen_lerobot/robots/bi_widowxai_follower/: __init__.py  bi_widowxai_follower.py  config_bi_widowxai_follower.py
trossen_lerobot/robots/widowxai_follower/: __init__.py  config_widowxai_follower.py  widowxai_follower.py
trossen_lerobot/teleoperators/: utils.py
trossen_lerobot/teleoperators/bi_widowxai_leader/: __init__.py  bi_widowxai_leader.py  config_bi_widowxai_leader.py
trossen_lerobot/teleoperators/widowxai_leader/: __init__.py  config_widowxai_leader.py  widowxai_leader.py
