[project]
name = "trossen_lerobot"
version = "0.1.0"
description = "Trossen Robotics LeRobot integration."
authors = [
    { name = "Trossen Robotics" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lerobot>=0.3.2",
    "trossen_arm>=1.8.5",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["trossen_lerobot"]

[tool.ruff]
exclude = ["venv", "build", "dist", ".git", ".ipynb"]
line-length = 99

[tool.ruff.lint]
# E, W: pycodestyle errors and warnings
# F: PyFlakes
# I: isort
# UP: pyupgrade
# B: flake8-bugbear (good practices, potential bugs)
# C4: flake8-comprehensions (more concise comprehensions)
# A: flake8-builtins (shadowing builtins)
# SIM: flake8-simplify
# RUF: Ruff-specific rules
# D: pydocstyle (for docstring style/formatting)
# S: flake8-bandit (some security checks, complements Bandit)
# T20: flake8-print (discourage print statements in production code)
# N: pep8-naming
# TODO: Uncomment rules when ready to use
select = [
    "E", "W", "F", "I", "B", "C4", "T20", "N" # "SIM", "A", "S", "D", "RUF", "UP"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.isort]
profile = "black"
force_single_line = false
line_length = 99
lexicographical = true
known_first_party = ["trossen_lerobot"]
force_sort_within_sections = true
