[project]
name = "lerobot-trossen"
version = "0.1.0"
description = "Trossen Robotics LeRobot integration"
requires-python = ">=3.10,<3.13"

dependencies = [
  "lerobot-robot-trossen>=0.1.0",
  "lerobot-teleoperator-trossen>=0.1.0",
]

[tool.uv.sources]
lerobot-robot-trossen = { workspace = true }
lerobot-teleoperator-trossen = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
